[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameOver.gd" type="Script" id=1]
[ext_resource path="res://200-offline-sprite.png" type="Texture" id=2]
[ext_resource path="res://fonts/pixelate/SFPixelate-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]

size = 100
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="Animation" id=2]

resource_name = "IN"
length = 3.0
loop = false
step = 0.1

[sub_resource type="Animation" id=3]

resource_name = "s"
length = 2.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("GAME:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GAME:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 361, 0 ), Vector2( 361, 92 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DinoLeft:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 1.8, 2.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -130.952, 347.21 ), Vector2( 171.952, 347.21 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DinoRight:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/keys = {
"times": PoolRealArray( 1.8, 2.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1150.01, 344.421 ), Vector2( 847.014, 344.421 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ButRestart:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/keys = {
"times": PoolRealArray( 0, 2.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("OVER:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 368, 610 ), Vector2( 368, 477 ) ]
}

[node name="GameOverScreen" type="Node2D"]

script = ExtResource( 1 )

[node name="Restart" type="Sprite" parent="."]

visible = false
position = Vector2( 511.911, 320.222 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 73, 70 )
_sections_unfolded = [ "Region", "Textures", "Transform" ]

[node name="DinoLeft" type="Sprite" parent="."]

position = Vector2( -130.952, 347.21 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 2118, 0, 85, 90 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="DinoRight" type="Sprite" parent="."]

position = Vector2( 1150.01, 344.421 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
flip_h = true
region_enabled = true
region_rect = Rect2( 2118, 0, 85, 90 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="GAME" type="Label" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 361.0
margin_right = 663.0
margin_bottom = 92.0
rect_scale = Vector2( 0, 0 )
rect_pivot_offset = Vector2( 155.559, 73.7997 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "GAME"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Focus", "Hint", "Rect", "custom_colors", "custom_fonts" ]

[node name="OVER" type="Label" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 368.0
margin_top = 610.0
margin_right = 670.0
margin_bottom = 702.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "OVER"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="ButRestart" type="Button" parent="."]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 411.0
margin_top = 250.0
margin_right = 603.0
margin_bottom = 420.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="ImgRestart" type="Sprite" parent="ButRestart"]

position = Vector2( 89.7507, 84.2105 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 73, 70 )
_sections_unfolded = [ "Region", "Textures", "Transform", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/IN = SubResource( 2 )
anims/s = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""
_sections_unfolded = [ "playback" ]

[connection signal="hide" from="." to="." method="_on_GameOverScreen_hide"]

[connection signal="visibility_changed" from="." to="." method="_on_GameOverScreen_visibility_changed"]

[connection signal="mouse_entered" from="ButRestart" to="." method="_on_Button_mouse_entered"]

[connection signal="mouse_exited" from="ButRestart" to="." method="_on_Button_mouse_exited"]

[connection signal="pressed" from="ButRestart" to="." method="_on_Button_pressed"]


